# sgx-ra-sample

./: .gitignore  CHANGES.md  LICENSE  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  agent.h  agent_curl.cpp  agent_curl.h  agent_wget.cpp  agent_wget.h  agent_winhttp.cpp  agent_winhttp.h  base64.c  base64.h  bootstrap  byteorder.c  byteorder.h  client.cpp  common.cpp  common.h  compile  config.h  config.h.in  config.status  configure  configure.ac  crypto.c  crypto.h  crypto_init.c  crypto_init.h  eckey.c  eckey.h  enclave_verify.c  enclave_verify.h  fileio.c  fileio.h  (+53 more)
.kwlp/: README.txt  buildspec.txt  configuration.txt  kwlp.properties  kwsettings.xml  workingsets.xml
.kwlp/db/: problems.db
.kwlp/workingcache/: buildspeccache.txt  dependencies.db
.kwlp/workingcache/build_time_configs/local/: analysis_profile.pconf
.kwlp/workingcache/tables/: .build_mode  System Model.mod  build.log.old  buildspec.out  configuration.xml  engine.pbf  engine_option  parse_errors.log.old  prepare_build.bpf  problem.pbf  problem_configuration_checksum.txt
.kwlp/workingcache/tables/clef/: build_data.txt  depinfo.txt  generated.kb  local.cache  local.cache.index  local.cache.stat  missinglibs.txt  nokbrecords.txt  nokbrecords_full.txt  nokbrecords_sys.txt  statNPD.kb
.kwlp/workingcache/tables/clef/local.kbdb/: 0.kb.idx  1.kb.idx  10.kb.idx  11.kb.idx  12.kb.idx  13.kb.idx  14.kb.idx  15.kb.idx  16.kb.idx  17.kb.idx  17_pre.kb.idx  18.kb.idx  19.kb.idx  2.kb.idx  20.kb.idx  21.kb.idx  22.kb.idx  3.kb.idx  4.kb.idx  5.kb.idx  6.kb.idx  7.kb.idx  8.kb.idx  9.kb.idx
.kwlp/workingcache/tables/dep/: Enclave.cpp_1.d  Enclave_t.c_0.d  Enclave_t.c_21.d  Enclave_u.c_14.d  Enclave_u.c_22.d  agent_curl.cpp_19.d  agent_wget.cpp_16.d  base64.c_11.d  byteorder.c_6.d  client.cpp_2.d  common.cpp_7.d  crypto.c_8.d  enclave_verify.c_18.d  fileio.c_10.d  hexutil.c_9.d  iasrequest.cpp_17.d  logfile.c_13.d  mrsigner.c_20.d  msgio.cpp_12.d  quote_size.c_5.d  sgx_detect_linux.c_3.d  sgx_stub.c_4.d  sp.cpp_15.d
.kwlp/workingcache/tables/modern/: modern_to_classic_mapping.txt
.kwlp/workingcache/tables/modern/clef/: build_data.txt  depinfo.txt  nokbrecords_full.txt
.kwps/: README.txt  kwps.properties
Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h  Enclave.vcxproj  Enclave.vcxproj.filters  Enclave_private.pem  Enclave_t.c  Enclave_t.h  Makefile.am  Makefile.in
EnclaveQuote/: EnclaveQuote-linux.edl.in  EnclaveQuote.c  EnclaveQuote.cpp  EnclaveQuote.edl  EnclaveQuote.vcxproj  EnclaveQuote.vcxproj.filters  EnclaveQuote_t.c  EnclaveQuote_t.h  Makefile  Makefile.am  Makefile.in
build-aux/: sgx_app.am  sgx_enclave.am  sgx_tlib.am
httpparser/: .response.h.swp  httpresponseparser.h  response.h
m4/: sgx_init.m4  sgx_init_optional.m4  sgx_tstdc_check.m4  sgx_tstdc_check_prefix.m4
public/: settings
public/vs/: settings.cmd
ref_sp/: gen-keypair  ias-dev.crt  ias-dev.key  ias-dev.key_3des  ias-dev.key_noenc  ias-dev.pfx  ias-dev.txt  key.hex  kparams.pem  out  plse-dev.spid  plse-ias-dev.pem  privkey.pem  pubkey.pem
service-provider/: service-provider.vcxproj  service-provider.vcxproj.filters
vs/: README.html  README.md  policy.in  remote-attestation-sample.sln  run-client.cmd  run-server.cmd  settings.cmd
vs/client/: Enclave_u.c  Enclave_u.h  client.bat  client.filters  client.sln  client.vcxproj  client.vcxproj.filters  run-client.cmd
vs/mrsigner/: mrsigner.vcxproj  mrsigner.vcxproj.filters
vs/service-provider/: run-server.cmd  service-provider.sln  service-provider.vcxproj  service-provider.vcxproj.filters  settings.cmd
win32/: agent_win32.cpp  agent_win32.h  agent_winhttp.cpp  agent_winhttp.h  getopt.c  getopt.h  sgx_detect_win.cpp
